#Tracking: fix the bug that table overflow, but grey background re-size.                  fix height of all cells should be identical                  fix cells too large, too much lost space.

--- a/components/forms/tracking/tracking.css
+++ b/components/forms/tracking/tracking.css
@@ -34,7 +34,6 @@
     padding-bottom: 2px;
     vertical-align: middle;
     word-wrap: break-word;
-
 }
 
 .header {
@@ -56,7 +55,9 @@
 
 .selectedCell {
     padding: 10px;
-    min-height: 60px;
+    /*display:inline-block;*/
+    width: 100%;
+    height: 100%;
     background-color: #ebf2f9;
     border: solid 1px #3572B0;
     border-radius: 4px;
@@ -65,7 +66,9 @@
 
 .cell {
     padding: 10px;
-    min-height: 60px;
+    /*display:inline-block;*/
+    width: 100%;
+    height: 100%;
     background-color: #fff;
     border-radius: 4px;
     border: solid 1px #ccc;
